examples/compiler-errors/compiler-errors.cpp
#include "csp.hpp"

enum class ID { Base, Derived };

struct Base {
    
};

struct Derived;


